--- a/CSS-MySite/index.html
+++ b/CSS-MySite/index.html
@@ -18,28 +18,28 @@
     <div class="top-container">
         <img src="images/cloud.png" class="top-cloud" alt="top-cloud">
         <h1>I'm Paritosh</h1>
-        <p>A Learner</p>
+        <h2>A Learner</h2>
         <img src="images/cloud.png" class="bottom-cloud" alt="top-cloud">
         <img src="images/mountain.png" alt="">
     </div>
     <div class="middle-container">
         <div class="profile">
-            <img src="" alt="">
+            <img class="profile-img" src="images/paritosh(2).jpg" alt="profile image">
             <h2>Hello.</h2>
-            <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.
+            <p class="intro">Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.
             </p>
         </div>
         <hr>
         <div class="skills">
             <h2>My Skills.</h2>
             <div class="skill-row">
-                <img class="" src="" alt="">
+                <img class="code-img" src="images/computer.png" alt="code-img">
                 <h3>Lorem & Ipsum</h3>
                 <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna
                     lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
             </div>
             <div class="skill-row">
-                <img class="" src="" alt="">
+                <img class="chilli-img" src="images/chillies.png" alt="">
                 <h3>Lorem Ipsum Dolor</h3>
                 <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis
                     mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
@@ -50,16 +50,19 @@
             <h2>Get In Touch</h2>
             <h3>Lorem ipsum dolor sit amet, non elit.</h3>
             <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
-            <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+            <a class="btn" href="mailto:paritoshg84@gmail.com">CONTACT ME</a>
         </div>
     </div>
 
 
     <div class="bottom-container">
-        <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-        <a class="footer-link" href="https://twitter.com/">Twitter</a>
-        <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-        <p>© Name Surname.</p>
+        <div class="links">
+            <a class="footer-link" href="https://www.linkedin.com/in/paritosh-gupta54015/">LinkedIn</a>
+            <a class="footer-link" href="https://twitter.com/">Twitter</a>
+            <a class="footer-link" href="https://paritoshg25.github.io/Full-Stack-Web-Development/CSS-MySite/">Website</a>
+        </div>
+        
+        <p>© Paritosh Gupta.</p>
     </div>
 </body>
 
